# exercise-competition

./: .cruft.json  .darglint  .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  .mutmut_config  .pre-commit-config.yaml  .prettierrc  .semgrep.yml  .shellcheckrc  .trivyignore  .yamllint  CHANGELOG.md  CLAUDE.md  CONFIG_TEMPLATES_SUMMARY.md  Dockerfile  LICENSE  README.md  REUSE.toml  SECURITY-FINDINGS.md  codecov.yaml  docker-compose.prod.yml  docker-compose.yml  osv-scanner.toml  pyproject.toml  renovate.json  sonar-project.properties
.claude/: README.md  settings.local.json.example
.claude/agents/: code-reviewer.md  merge-standards.md  security-auditor.md  test-engineer.md
.claude/commands/: merge-standards.md  plan.md  pr.md  quality.md  security.md  testing.md
.claude/context/: python-standards.md  testing-patterns.md
.claude/skills/commit-prepare/: SKILL.md
.claude/skills/git/: SKILL.md
.claude/skills/pr-prepare/: SKILL.md
.claude/skills/project-planning/: SKILL.md
.claude/skills/project-planning/reference/: document-guide.md  prompting-patterns.md
.claude/skills/project-planning/scripts/: validate-planning-docs.py
.claude/skills/project-planning/templates/: adr-template.md  pvs-template.md  roadmap-template.md  tech-spec-template.md
.claude/skills/project-planning/workflows/: synthesize.md
.claude/skills/quality/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci-gate.yml  ci.yml  container-security.yml  coverage.yml  dependency-standards-validation.yml  fips-compatibility.yml  mutation-testing.yml  pr-validation.yml  publish-pypi.yml  python-compatibility.yml  qlty.yml  release.yml  reuse.yml  sbom.yml  scorecard.yml  security-analysis.yml  security-gate.yml  slsa-provenance.yml  validate-cruft.yml
.qlty/: qlty.toml
.standards/: CLAUDE.baseline.md  README.baseline.md  README.md  REUSE.baseline.toml  env.example.baseline  mkdocs.yml.baseline  pyproject.toml.baseline  template_feedback.baseline.md
docs/: nick-roast-dossier.md
docs/planning/: PROJECT-PLAN.md  project-vision.md  roadmap.md  tech-spec.md
docs/planning/adr/: adr-001-initial-architecture.md
docs/security/: vulnerability-risk-register.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/assets/: .gitkeep
frontend/src/components/: ApiStatus.css  ApiStatus.tsx
frontend/src/hooks/: useApi.ts
frontend/src/test/: App.test.tsx  setup.ts
overrides/: .gitkeep
scripts/: README.md  check_fips_compatibility.py  check_orphaned_files.py  check_quality_gate.py  check_type_hints.py  cleanup_conditional_files.py  cruft-update.sh  deploy.sh  generate_requirements.sh  setup_github_protection.py  update-claude-standards.sh  validate_assuredoss.py
src/exercise_competition/: __init__.py  main.py  models.py  schemas.py
src/exercise_competition/api/: __init__.py  health.py  routes.py  strava.py
src/exercise_competition/core/: __init__.py  config.py  database.py  exceptions.py
src/exercise_competition/middleware/: __init__.py  correlation.py  security.py
src/exercise_competition/services/: cache.py  jokes.py  scoring.py  strava.py
src/exercise_competition/static/: style.css
src/exercise_competition/templates/: base.html  leaderboard.html  strava.html  submit.html  week.html
src/exercise_competition/utils/: __init__.py  financial.py  logging.py
tests/: conftest.py  test_example.py
tests/e2e/: conftest.py  test_ui.py
tests/integration/: __init__.py  test_health.py  test_submit_flow.py
tests/unit/: __init__.py  test_correlation.py  test_error_paths.py  test_example.py  test_exceptions.py  test_jokes.py  test_lifespan.py  test_models.py  test_routes.py  test_schemas.py  test_scoring.py  test_security.py  test_strava.py
tools/: gen_tools_catalog.py
